Working arbitrary node dockerized cosmos chain
This commit generates a working arbitrary node cosmos chain after
building the required binaries from scratch. Very nice for testing.
It still needs a lot of convience features but it's working well enough
to be good for now.

Next up is the addition of the Etherum chain and deployment of the
peggy contracts.

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,9 +1,11 @@
 FROM fedora
 ENV GOPATH=/go
 ENV PATH=$PATH:/go/bin
-RUN dnf install -y git golang make gcc gcc-c++ which
+RUN dnf install -y git golang make gcc gcc-c++ which iproute iputils procps-ng vim tmux net-tools htop
 ARG REPOFOLDER
+ARG NODES
+ENV NODES=$NODES
 ADD $REPOFOLDER /peggy
 RUN pushd /peggy/module/ && make && make install
-RUN pushd /peggy/ && bash tests/setup-validators.sh
-CMD peggyd start
+RUN pushd /peggy/ && tests/setup-validators.sh 20
+CMD pushd /peggy/ && tests/run-validators.sh 20
