--- a/module/Makefile
+++ b/module/Makefile
@@ -15,8 +15,8 @@ BUILD_FLAGS := -ldflags '$(ldflags)'
 all: install
 
 install: go.sum
-		go install -mod=readonly $(BUILD_FLAGS) ./cmd/peggyd
-		go install -mod=readonly $(BUILD_FLAGS) ./cmd/peggycli
+		go install $(BUILD_FLAGS) ./cmd/peggyd
+		go install $(BUILD_FLAGS) ./cmd/peggycli
 
 go.sum: go.mod
 		@echo "--> Ensure dependencies have not been modified"
