--- a/tests/test-runner/Cargo.toml
+++ b/tests/test-runner/Cargo.toml
@@ -5,7 +5,8 @@ authors = ["Justin Kilpatrick <justin@althea.net>"]
 edition = "2018"
 
 [dependencies]
-contact = {git = "https://github.com/althea-net/contact", rev = "3d42773eb46b718426f0bd05ed9bcdd9eeb6150f"}
+contact = {git = "https://github.com/althea-net/contact", rev = "cd5e1a2bed21de00b4654494b018f046c76bb1e6"}
+deep_space = {git = "https://github.com/althea-net/deep_space/", rev = "bc3bfff3d7fc79b604d00315b24d29e8c254d807", features = ["peggy", "key_import"]}
 # deep_space = {path = "../../deep_space"}
 # contact = {path = "../../contact"}
 serde_derive = "1.0"
@@ -19,3 +20,4 @@ url = "2"
 web30 = {git = "https://github.com/althea-net/web30"}
 num256 = "0.2"
 rand = "0.7"
+log = "0.4"
