Being deploying contracts in the test env
This starts the process of deploying contracts in the testing environment
we can't completely deploy the Peggy contract yet becuase the valset confirm
flow is not finished.

--- a/solidity/package.json
+++ b/solidity/package.json
@@ -23,7 +23,8 @@
     "ethers": "^4.0.47",
     "ts-node": "^8.10.1",
     "typechain": "^1.0.5",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "axios": "0.20.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^3.0.1",
