Add Go tests in Github actions (#21)
* Add Go tests in Github actions

* Update go.yml

* Enable tests in module Makefile

--- a/module/Makefile
+++ b/module/Makefile
@@ -22,9 +22,8 @@ go.sum: go.mod
 		@echo "--> Ensure dependencies have not been modified"
 		GO111MODULE=on go mod verify
 
-# Uncomment when you have some tests
-# test:
-# 	@go test -mod=readonly $(PACKAGES)
+test:
+	@go test -mod=readonly $(PACKAGES)
 
 # look into .golangci.yml for enabling / disabling linters
 lint:
