Rename Validator Daemon to Orchestrator
This resolves #9 and deals with the confusing naming of the rust
co-process that all the validators run

--- a/orchestrator/Cargo.toml
+++ b/orchestrator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "validator-daemon"
+name = "orcestrator"
 version = "0.1.0"
 authors = ["Justin Kilpatrick <justin@althea.net>"]
 edition = "2018"
